--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,19 @@
 		    <artifactId>tomcat-embed-jasper</artifactId>
 		    <version>9.0.58</version>
 		</dependency>	
-		
+
+		<dependency>
+   		 <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.9.0</version> <!-- 최신 버전으로 설정하세요 -->
+		</dependency>
+
+		<dependency>
+		    <groupId>org.mybatis.spring.boot</groupId>
+		    <artifactId>mybatis-spring-boot-starter</artifactId>
+		    <version>2.3.2</version> <!-- 최신 버전으로 설정하세요 -->
+		</dependency>
+
 		
 		<dependency>
 		    <groupId>javax.servlet</groupId>
