--- a/pom.xml
+++ b/pom.xml
@@ -76,11 +76,12 @@
 		    <version>2.9.0</version> <!-- 최신 버전으로 설정하세요 -->
 		</dependency>
 
-		<dependency>
-		    <groupId>org.mybatis.spring.boot</groupId>
-		    <artifactId>mybatis-spring-boot-starter</artifactId>
-		    <version>2.3.2</version> <!-- 최신 버전으로 설정하세요 -->
-		</dependency>
+	<dependency>
+	    <groupId>org.mybatis.spring.boot</groupId>
+	    <artifactId>mybatis-spring-boot-starter</artifactId>
+	    <version>2.2.0</version> <!-- 이 버전으로 설정하세요 -->
+	</dependency>
+
 
 		
 		<dependency>
