--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,6 @@
 			<artifactId>mariadb-java-client</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
@@ -69,20 +68,7 @@
 		    <artifactId>tomcat-embed-jasper</artifactId>
 		    <version>9.0.58</version>
 		</dependency>	
-
-		<dependency>
-   		 <groupId>com.google.code.gson</groupId>
-		    <artifactId>gson</artifactId>
-		    <version>2.9.0</version> <!-- 최신 버전으로 설정하세요 -->
-		</dependency>
-
-	<dependency>
-	    <groupId>org.mybatis.spring.boot</groupId>
-	    <artifactId>mybatis-spring-boot-starter</artifactId>
-	    <version>2.2.0</version> <!-- 이 버전으로 설정하세요 -->
-	</dependency>
-
-
+		
 		
 		<dependency>
 		    <groupId>javax.servlet</groupId>
@@ -95,6 +81,29 @@
 		    <artifactId>commons-fileupload</artifactId>
 		    <version>1.5</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.7</version>
+		</dependency>
+		<!-- 대용량 파일 처리 -->
+          <dependency>
+              <groupId>commons-io</groupId>
+              <artifactId>commons-io</artifactId>
+              <version>2.6</version>
+          </dependency>
+          
+          <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+      <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>2.8.6</version>
+      </dependency>
+      <dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <optional>true</optional>
+	</dependency>
 
 	</dependencies>
 
@@ -104,17 +113,8 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-
-		<plugin>
-	 	 	<groupId>org.apache.maven.plugins</groupId>
-	  	 	<artifactId>maven-compiler-plugin</artifactId>
-	  	 	<version>3.10.1</version>
-	  	 	<configuration>
-	    	 	<source>11</source>
-	    	 	<target>11</target>
-        		 </configuration>
-		</plugin>		
-	</plugins>
+		</plugins>
 	</build>
+
 
 </project>
